# ChangeLog for app-emulation/open-vm-tools-kmod
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*open-vm-tools-kmod-0.0.20110328.387002 (31 Mar 2011)

  31 Mar 2011; Vadim Kuznetsov <vadimk@gentoo.org>
  -open-vm-tools-kmod-0.0.20110223.368700-r1.ebuild,
  +open-vm-tools-kmod-0.0.20110328.387002.ebuild:
  version bump
