@@ -1,4 +1,4 @@
-DIST open-vm-tools-2011.03.28-387002.tar.gz 3696101 RMD160 4423f9177c429c7bcb9c5275f935a3fc34191d96 SHA1 c3c2d1d83f2fffaecba1cdfc2f6fcd2b3fc66ade SHA256 7de69a04c75f217e510d402fb33b0e064347c226bc916da6206218dd3a048d7c
-EBUILD open-vm-tools-kmod-0.0.20110328.387002.ebuild 1806 RMD160 b90ac2ed875525aaad39c0f5dbefa4ea1af88d41 SHA1 2986384273c6d545db67db12cfaf84b29ebfef2f SHA256 a66ec070786d3719b2d3a92a8abfde46ab6d15f4c2237826feb778d4ec0ce8c0
+DIST open-vm-tools-2011.05.27-420096.tar.gz 3667332 RMD160 3ce325d9e6cd39284a293c4d7b9a0c9f720e173a SHA1 ec284f6533f4c599efdf25146a8ed9d8b3f636c1 SHA256 181dafa57c175515ec716f215c2757d17665ac2dd4c375ca11046599e77967e4
+EBUILD open-vm-tools-kmod-0.0.20110527.420096.ebuild 1806 RMD160 b90ac2ed875525aaad39c0f5dbefa4ea1af88d41 SHA1 2986384273c6d545db67db12cfaf84b29ebfef2f SHA256 a66ec070786d3719b2d3a92a8abfde46ab6d15f4c2237826feb778d4ec0ce8c0
 MISC ChangeLog 358 RMD160 32dceabcba119410d42912ed141b6250b2833f6a SHA1 6563928c66adb22e7e27fb42696a458f13f727ed SHA256 b080d2a75067d4c8ddb01bfc99e495746fa9285dc610ed6d28be025e3237e681
 MISC metadata.xml 503 RMD160 fc12351dcb94137033d4810fc69d0211e0d0ec93 SHA1 bbe6feea6eff4574c897555e35649c6bd1f01963 SHA256 bed306dcff1b6d4243cf63ba912c88d3a630081501891687925c9dbf37995e00
