@@ -2,7 +2,7 @@ AUX default-scripts.patch 6245 RMD160 858a918af6d783d06131abcf8352b650fb47d390 S
 AUX open-vm-tools.desktop 140 RMD160 2e4a6ec7d866975c0952e78b5ea72fef3904b411 SHA1 0b012eb6f0fedadf8e6dfefb8a63eec2d52eb43f SHA256 86363f5430d33afb2f9fcb004ca86813f14434f56986e427e296bd530724eeb0
 AUX open-vm-tools.initd 1876 RMD160 41813fe2883502e1c6c73a58a860d51150e4d013 SHA1 a0844a8bb360df3c37bbcf9a46f9c0fb5a452391 SHA256 e7e2f8d627dbcc3703c431b2d47ec43a5b60a51d2001e66f366b8825afa0e776
 AUX open-vm.confd 88 RMD160 5e398024e72a871f258d73e09f02e37a815443b0 SHA1 56133c21c6d29243ac81a9c1ada61616778f3ce2 SHA256 180a2b6d9d18af319b79b2ca6ebf1020b63e5ebf2f601a63c1a9f9f7d2e0b95c
-DIST open-vm-tools-2011.03.28-387002.tar.gz 3696101 RMD160 4423f9177c429c7bcb9c5275f935a3fc34191d96 SHA1 c3c2d1d83f2fffaecba1cdfc2f6fcd2b3fc66ade SHA256 7de69a04c75f217e510d402fb33b0e064347c226bc916da6206218dd3a048d7c
-EBUILD open-vm-tools-0.0.20110328.387002-r1.ebuild 3354 RMD160 4bb4b0fdbb7b354238ac969caef6222a59b87d6d SHA1 f0a20a4ad4cf4e2592e4b7ab08fb149020ce4300 SHA256 5952976609c780d2266bed95d9e363c4dba57552d2fa4890d4caf7120ba5fab8
+DIST open-vm-tools-2011.05.27-420096.tar.gz 3667332 RMD160 3ce325d9e6cd39284a293c4d7b9a0c9f720e173a SHA1 ec284f6533f4c599efdf25146a8ed9d8b3f636c1 SHA256 181dafa57c175515ec716f215c2757d17665ac2dd4c375ca11046599e77967e4
+EBUILD open-vm-tools-0.0.20110527.420096.ebuild 3288 RMD160 eb4cfa9bddb38849dad250d078ecba91ebbe350c SHA1 0f68d3ced1c2ccb006a99555df25463b3aff1705 SHA256 4cde018ca3b627641014b21412097f540bbbac78f307059180f85d856c3611c4
 MISC ChangeLog 546 RMD160 e19ea60bbbae335e97fa1a5db2537fdc23012892 SHA1 f252daea56df29b5c19e9a86210bb268220d7964 SHA256 7d17d4ae439317f3faf53755f582d56353ff6310abb2f40dd5df6ae4bf7ce4eb
 MISC metadata.xml 791 RMD160 55a935bb194818c26471ad7e551dbffa1df2fc1c SHA1 cac933fef6a9eedc65a3d96f4edd117432bcbb2e SHA256 ac4e805eb85bb369b37f3381a6271a5bae8739b42465f64ee168cdc9683738d7
